# karaoke

./: .gitignore  compositor.css  config.py  counting.txt  downloader.py  index.html  pyproject.toml  sing.js  sing.py  style.css  test.css
app/: __init__.py  converter.py  exampleapp.py  exampleroutes.py  models.py  route.py  utilities.py
app/classes/: cache.py  loger.py  test.py  tune.py  tune_error.py
app/compositor/: compositor.py  recorder.py
app/compositor/static/: compositor.css  compositor.js  rehersal.js
app/compositor/templates/: compositor.html  rehersal.html
app/land/: land.py
app/land/static/: sing.css  sing.js
app/land/templates/: base.html  sing.html
app/static/: base.js  sing.css  sing.js  style.css
app/static/compositor/: compositor.js
app/static/sing/: sing.js  style.css
app/static/test/: test.js
app/templates/: compositor.html  example.html  experiment.html  test.html
migrations/versions/: 0d70b8169971_.py  302905e07b40_.py  c13000c832a1_.py  caa8dd653c8e_.py
